--- a/public/stylesheets/shared.scss
+++ b/public/stylesheets/shared.scss
@@ -431,25 +431,3 @@ footer {
         opacity: 1;
     }
 }
-
-@keyframes animate {
-    0%{
-        opacity: 0;
-        transform: rotate(45deg) translate(-32px,-32px);
-    }
-    50%{
-        opacity: 1;
-    }
-    100%{
-        opacity: 0;
-        transform: rotate(45deg) translate(0px,0px);
-    }
-}
-
-@media only screen and (max-device-width: 1366px) {
-    .hero-section .hero-section__image {
-      background-attachment: scroll;
-    }
-  }
-
-  
